Expose javac plugin to service loader