@@ -6,6 +6,13 @@ repositories {
     jcenter()
 }
 
+compileJava {
+    options.compilerArgs = [
+        '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+    ]
+}
+
 dependencies {
     testImplementation(
         'org.junit.jupiter:junit-jupiter-api:5.6.0',
